[package]
name = "api"
version = "0.1.0"
authors = ["modulitos <modulitos@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.1"
warp = "0.2.3"
tokio = { version = "0.2.21", features = ["macros", "blocking", "rt-threaded", "time"]}
pretty_env_logger = "0.4.0"
serde = { version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
log = "^0.4"
simple_logger = "^1"
once_cell = "1.4.1"
anyhow = "1.0.32"
thiserror = "1.0.20"

[[bin]]
name = "bootstrap"
path = "src/bin/aws_lambda.rs"
